# cardano-coin-selection

./: .gitignore  .hlint.yaml  .travis.yml  CNAME  CONTRIBUTING.md  ChangeLog.md  LICENSE  README.md  cabal.project  cardano-coin-selection.cabal  doc-index.html  doc-index.json  flake.nix  index.html  package.yaml  stack.yaml
.coverage/: template.overlay
.github/workflows/: check-stylish-haskell.yml  haddock.yml  main.yml  style.yml
cardano-coin-selection/: Cardano-CoinSelection-Algorithm-LargestFirst.html  Cardano-CoinSelection-Algorithm-Migration.html  Cardano-CoinSelection-Algorithm-RandomImprove.html  Cardano-CoinSelection-Algorithm.html  Cardano-CoinSelection-Fee.html  Cardano-CoinSelection.html  Paths_cardano_coin_selection.html  cardano-coin-selection.haddock  doc-index.json
cardano-coin-selection/src/: Cardano.CoinSelection.Algorithm.LargestFirst.html  Cardano.CoinSelection.Algorithm.Migration.html  Cardano.CoinSelection.Algorithm.RandomImprove.html  Cardano.CoinSelection.Algorithm.html  Cardano.CoinSelection.Fee.html  Cardano.CoinSelection.html  Internal.Coin.html  Internal.Invariant.html  Internal.Rounding.html  Internal.html  Paths_cardano_coin_selection.html
information/: repository-creation-process.md  specification.md
lib/core/src/Cardano/Wallet/Primitive/: Fee.hs  Types.hs
src/: Internal.hs
src/Cardano/: CoinSelection.hs  Fee.hs  Types.hs  Unsafe.hs
src/Cardano/CoinSelection/: LargestFirst.hs  Migration.hs  Random.hs  RandomImprove.hs
src/Cardano/Wallet/: Unsafe.hs
src/Data/: Quantity.hs
src/Internal/: Invariant.hs  Rounding.hs
src/Numeric/: Rounding.hs
src/internal/: Internal.hs
src/internal/Internal/: Coin.hs  DustThreshold.hs  Fee.hs  Invariant.hs  Rounding.hs  SafeNatural.hs
src/internal/Internal/Cardano/: CoinSelection.hs  Fee.hs  Types.hs
src/internal/Internal/Cardano/CoinSelection/: LargestFirst.hs  Migration.hs  RandomImprove.hs
src/internal/Internal/Data/: Invariant.hs
src/internal/Internal/Numeric/: Rounding.hs
src/test/Cardano/: CoinSelectionSpec.hs  FeeSpec.hs  TypesSpec.hs
src/test/Cardano/CoinSelection/: FeeSpec.hs  LargestFirstSpec.hs  MigrationSpec.hs  RandomImproveSpec.hs  TypesSpec.hs
src/test/Cardano/CoinSelection/Algorithm/: LargestFirstSpec.hs  MigrationSpec.hs  RandomImproveSpec.hs
src/test/Cardano/Test/: Utilities.hs
src/test/Internal/: CoinSpec.hs  SafeNaturalSpec.hs
src/test/Test/Cardano/: Utilities.hs
src/test/Test/Vector/: Shuffle.hs  ShuffleSpec.hs
test/Cardano/: CoinSelectionSpec.hs  FeeSpec.hs  TypesSpec.hs
test/Cardano/CoinSelection/: LargestFirstSpec.hs  MigrationSpec.hs  RandomImproveSpec.hs  RandomSpec.hs
test/Test/: Unsafe.hs  Utilities.hs
test/Test/Cardano/: Types.hs
test/Test/Vector/: Shuffle.hs  ShuffleSpec.hs
test/unit/Cardano/Wallet/Primitive/: TypesSpec.hs
