name:                cardano-coin-selection
version:             0.0.1
synopsis:            Algorithms for coin selection and fee balancing.
description:         A selection of algorithms for coin selection and fee
                     balancing, used in the Cardano ecosystem. Please see
                     README.md for further details.
homepage:            https://github.com/input-output-hk/cardano-coin-selection
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2020 IOHK
license:             Apache-2.0
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/input-output-hk/cardano-coin-selection.git

flag werror
    description: Enable `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(werror))
    ghc-options:
      -Werror
  build-depends:
      base < 4.14
    , bytestring
    , containers
    , cryptonite
    , deepseq
    , fmt
    , quiet
    , text
    , transformers
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.CoinSelection
      Cardano.CoinSelection.LargestFirst
      Cardano.CoinSelection.Migration
      Cardano.CoinSelection.RandomImprove
      Cardano.Fee
      Cardano.Types
      Numeric.Rounding

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(werror))
    ghc-options:
      -Werror
  build-depends:
      base
    , bytestring
    , cardano-coin-selection
    , containers
    , cryptonite
    , deepseq
    , fmt
    , hspec
    , memory
    , QuickCheck
    , random
    , quiet
    , text
    , transformers
    , vector
  build-tools:
      hspec-discover
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
      Cardano.CoinSelection.LargestFirstSpec
      Cardano.CoinSelection.MigrationSpec
      Cardano.CoinSelection.RandomImproveSpec
      Cardano.CoinSelectionSpec
      Cardano.FeeSpec
      Cardano.TypesSpec
      Test.Utilities
      Test.Vector.Shuffle
      Test.Vector.ShuffleSpec
