name:                cardano-coin-selection
version:             0.0.1
synopsis:            Algorithms for coin selection and fee balancing.
description:         A selection of algorithms for coin selection and fee
                     balancing, used in the Cardano ecosystem. Please see
                     README.md for further details.
homepage:            https://github.com/input-output-hk/cardano-coin-selection
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2020 IOHK
license:             Apache-2.0
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       2.0

source-repository head
  type:     git
  location: https://github.com/input-output-hk/cardano-coin-selection.git

flag werror
    description: Enable `-Werror`
    default: False
    manual: True

library cardano-coin-selection-internal
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(werror))
    ghc-options:
      -Werror
  build-depends:
      base < 4.14
    , bytestring
    , containers
    , cryptonite
    , deepseq
    , fmt
    , quiet
    , text
    , transformers
  hs-source-dirs:
      src/internal
  exposed-modules:
      Internal
      Internal.Cardano.CoinSelection
      Internal.Cardano.CoinSelection.LargestFirst
      Internal.Cardano.CoinSelection.Migration
      Internal.Cardano.CoinSelection.RandomImprove
      Internal.Cardano.Fee
      Internal.Cardano.Types
      Internal.Data.Invariant
      Internal.Numeric.Rounding

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(werror))
    ghc-options:
      -Werror
  build-depends:
      base < 4.14
    , cardano-coin-selection-internal
  hs-source-dirs:
      src/library
  exposed-modules:

test-suite cardano-coin-selection-test
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(werror))
    ghc-options:
      -Werror
  build-depends:
      base
    , bytestring
    , cardano-coin-selection-internal
    , containers
    , cryptonite
    , deepseq
    , fmt
    , hspec
    , memory
    , QuickCheck
    , random
    , quiet
    , text
    , transformers
    , vector
  build-tool-depends:
      hspec-discover:hspec-discover
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      src/test
  main-is:
      Spec.hs
  other-modules:
      Cardano.CoinSelection.LargestFirstSpec
      Cardano.CoinSelection.MigrationSpec
      Cardano.CoinSelection.RandomImproveSpec
      Cardano.CoinSelectionSpec
      Cardano.FeeSpec
      Cardano.TypesSpec
      Test.Cardano.Utilities
      Test.Vector.Shuffle
      Test.Vector.ShuffleSpec
